# movie-dialog-analasys

./: .gitignore  .script.txt.swo  .script.txt.swp  README.md  main.py  pyproject.toml  script.txt
src/movie_dialog_analasys/: functions.py  main.py
tests/: test_functions.py
