[project]
name = "movie-dialog-analasys"
version = "0.1.0"
description = ""
authors = [
    {name = "OfriRose",email = "ofri.rozner@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "movie_dialog_analasys", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
